--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pokedex",
   "version": "0.1.0",
-  "homepage": "https://{username}.github.io/{nome-do-repositorio}",
+  "homepage": "https://JoseEliodoro.github.io/pokedex",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
